[project]
name = "ubox-stream"
version = "0.1.0"
description = "UBIA P4P camera stream client"
requires-python = ">=3.11"

[project.scripts]
ubox-stream = "ubox_stream.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ubox_stream"]
